Revision history for Number-AnyBase

{{$NEXT}}

1.50000       2013-01-04 14:12:56 Europe/Rome

   * Bug Fixes
      * Contrary to the docs, base64 and base64url alphabets were not sorted.

   * Code Enhancements
      * Specialized constructors added: new_hex_lc, new_dna, new_dna_lc,
        new_bytes.

   * Doc Enhancements
      * Recipes added to the COOKBOOK section: DNA compression,
        Binary-to-text Encoding, UUID Compression.
      * Several minor fixes and enhancements.

1.00000       2012-12-31 07:05:49 Europe/Rome

   * First release.