@@ -4,7 +4,7 @@ Number::AnyBase - Converts decimals to and from any alphabet of any size (for sh
 
 # VERSION
 
-version 1.50000
+version 1.50001
 
 # SYNOPSIS
 
@@ -413,11 +413,11 @@ _creative_ uses, if a bit extravagant :-)
 ## DNA Compression
 
 This example shows how the _bytes_ alphabet can be used to effectively compress
-random data, when expressed in a shorter alphabet (the _DNA_ alphabet in
+random data, when expressed in a shorter alphabet (the _DNA alphabet_ in
 this case).
 
-If the data are randomized (i.e. not skewed), this technique easily beats any
-compression algorithm.
+If the data are sufficiently randomized (i.e. not skewed), this technique easily
+beats most general purpose compression algorithms.
 
 As shown below, the conversion to the bytes alphabet produces about a 40%
 better compression than zip (with default options).
@@ -491,14 +491,20 @@ produced string has only _safe_ characters.
     CTCCAGGCACCCTTCTTTCCTCTTCCCCTTGCCCTTGCCCTGACCTCCCAGCCCTATGGATGTGGGGTCCCCATC
     ATCCCAGCTGCTCCCAAATAAACTCCAGAAG
 
+Of course there is nothing magic here: this technique simply leads to a 2-bit
+representation for the original symbols (being them 4).
+For truly random data, this the best that can be done however (compression
+algorithms specifically tailored for DNA sequences there exist, but they still
+leverage on some data pattern repetitions to get better results).
+
 ## Binary-to-text Encoding
 
 In a sense, this example is the opposite of the previous one: this time the
 target alphabet is shorter than the source one, therefore the resulting string
 is longer than the original one. There is an advantage however: the resulting
 string contains only _safe_ characters (while the original string is in general
-binary), and can therefore be trasmitted/embedded where binary data would have
-caused problems.
+binary), and it can therefore be trasmitted/embedded where binary data would
+have caused problems.
 
 Working on the whole original string rather than on blocks, the technique shown
 below easily beats any binary-to-text standard algorithm (the efficiency of
@@ -511,7 +517,7 @@ comparison (to be fair, the `Number::AnyBase` ascii alphabet has also more than
 
 Also note how, in order to maximize the efficiency, `Number::AnyBase` lets
 freely choose the bignum library (in this case the excellent `Math::GMP`),
-even when converting to decimals.
+even when converting (to decimals) from arbitrary alphabets.
 
     use strict;
     use warnings;
