@@ -1,5 +1,5 @@
 name             = Number-AnyBase
-version          = 1.50000
+version          = 1.50001
 author           = Emanuele Zeppieri <emazep@cpan.org>
 license          = Perl_5
 copyright_holder = Emanuele Zeppieri
